# FaceRecognize

./: .gitignore  README.md  compare.py  download_lfw.py  export_model.py  facecrop.py  finetune.py  lfw_data_analysis.py  lfw_eval.py  lfw_eval_mobilefacenet.py  lfw_eval_vit.py  lfw_mobilefacenet_finetuned_sims.pkl  lfw_mobilefacenet_sims.pkl  lfw_sims.pkl  lfw_vit_sims.pkl  mobilefacenet.py  model.py  modelv2.py  realtime_face_detection.py  requirements.txt  showcase.py  test_vit.py  train.py  vit.py
C++/: CMakeLists.txt  export_facenet.py  showcase.cpp  test_vit.cpp
